# shader

./: CMakeLists.txt  README.md  ball.h  glad.c  main.cpp  model.fs  model.h  model.vs  obj.h  version.rc
glad/include/glad/: glad.h
